--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,12 @@ body {
   align-items: center;
   height: 100vh;
   width: 100vw;
+  font-family: "Hind", sans-serif;
 }
 
 main {
   display: flex;
   align-items: flex-end;
-  width: 70vw;
-  border: blue solid;
   justify-content: space-around;
 }
 
@@ -28,10 +27,11 @@ table {
 td {
   width: 50px;
   height: 50px;
-  border: 1px solid black;
+  border-right: 1px solid rgb(156, 154, 154);
+  border-bottom: 1px solid rgb(156, 154, 154);
   text-align: center;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
 }
 td:hover {
@@ -46,10 +46,17 @@ tr:nth-child(3n) td {
   border-bottom: 2px solid black;
 }
 
+.side-tools {
+  display: flex;
+  flex-direction: column;
+  height: 452px;
+  /* border: 3px solid green; */
+  justify-content: space-evenly;
+}
+
 .help-btn {
   display: flex;
   height: 44px;
-  border: solid blue;
   align-items: center;
   justify-content: space-evenly;
 }
@@ -67,11 +74,26 @@ tr:nth-child(3n) td {
   background: rgb(82 143 206);
 }
 
+.tools-btn {
+  display: flex;
+  justify-content: space-evenly;
+}
+.tools-btn > button {
+  background: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+.tools-btn > button > img {
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+}
+
 .number-btn {
   display: flex;
-  width: 242px;
+  width: 232px;
   height: 228px;
-  border: solid blue;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
@@ -89,3 +111,19 @@ tr:nth-child(3n) td {
 .number:hover {
   background: rgb(201, 198, 198);
 }
+
+/* @media only screen and (max-width: 694px) {
+  .side-tools {
+    display: flex;
+    flex-direction: column;
+    height: 452px;
+  
+    justify-content: space-evenly;
+  }
+
+  .help-btn {
+  }
+
+  .tools-btn {
+  }
+} */
