--- a/css/style.css
+++ b/css/style.css
@@ -121,39 +121,44 @@ tr:nth-child(3n) td {
 }
 
 @media only screen and (max-width: 768px) {
+  body {
+    position: fixed;
+    align-items: flex-start;
+    margin: 33px auto;
+  }
   main {
     flex-direction: column;
   }
   .side-tools {
+    display: flex;
+    align-items: center;
     width: 450px;
-    height: 21vh;
-    align-items: flex-start;
-  }
-
-  .side-tools > div {
+    height: 238px;
+    /* border: solid; */
     flex-direction: row;
-    align-content: center;
-    height: 69px;
+  }
+  .side-tools > div {
+    width: 399px;
+    height: 236px;
   }
 
   .help-btn {
     height: 67px;
     width: 236px;
   }
-
-  .tools-btn {
-    width: 210px;
+  .tools-btn > button > img {
+    width: 35px;
+    height: 35px;
   }
 
   .number-btn {
-    width: 448px;
-    height: 47px;
+    width: 319px;
   }
 
   .number {
-    font-size: 20px;
-    width: 30px;
-    height: 30px;
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
   }
 }
 
@@ -163,6 +168,7 @@ tr:nth-child(3n) td {
   }
   table {
     width: 400px;
+    /* margin-bottom: 1rem; */
   }
 
   td {
@@ -174,16 +180,20 @@ tr:nth-child(3n) td {
     display: flex;
     align-items: center;
     width: 400px;
-    height: 68px;
-    border: solid;
+    height: 290px;
+    /* border: solid; */
+    flex-direction: column;
   }
   .side-tools > div {
     width: 399px;
-    height: 38px;
+    height: 111px;
+    /* margin-bottom: 1rem;
+    /* margin-top: 1rem; */
+    /* border: solid; */
   }
   .help-btn {
     height: 35px;
-    width: 236px;
+    width: 397px;
   }
 
   .help-btn > button {
@@ -192,19 +202,19 @@ tr:nth-child(3n) td {
   }
 
   .tools-btn > button > img {
-    width: 24px;
-    height: 24px;
+    width: 29px;
+    height: 29px;
   }
 
   .number-btn {
-    width: 399px;
-    height: 28px;
+    display: flex;
+    width: 199px;
   }
 
   .number {
-    font-size: 17px;
-    width: 28px;
-    height: 28px;
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
   }
 }
 
