--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ tr:nth-child(3n) td {
   }
   .side-tools > div {
     width: 399px;
-    height: 236px;
+    height: 212px;
   }
 
   .help-btn {
@@ -217,7 +217,7 @@ tr:nth-child(3n) td {
   table {
     width: 340px;
     /* margin-bottom: 1rem; */
-    margin-top: 4rem;
+    margin-top: 2rem;
   }
   td {
     width: 37.777px;
@@ -247,5 +247,29 @@ tr:nth-child(3n) td {
   .number {
     width: 40px;
     height: 40px;
+  }
+}
+
+@media only screen and (max-width: 340px) {
+  table {
+    width: 275px;
+    /* margin-bottom: 1rem; */
+    /* margin-top: 2rem; */
+  }
+  td {
+    width: 30.555px;
+    height: 30.555px;
+  }
+  .side-tools {
+    width: 275px;
+    /* height: 230px; */
+  }
+  .side-tools > div {
+    width: 275px;
+    /* margin-bottom: 2rem;*/
+  }
+  .help-btn {
+    width: 275px;
+    /* margin-bottom: 0.6rem; */
   }
 }
