--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   width: 100vw;
   font-family: "Hind", sans-serif;
   background-attachment: fixed;
-  background: #e3e7ea;
+  background: rgb(227, 231, 234);
 }
 
 main {
@@ -25,7 +25,7 @@ table {
   border: 2px solid black;
   border-collapse: collapse;
   width: 450px;
-  background: white;
+  background: rgb(255, 255, 255);
 }
 
 td {
